modificacion de estilo de letra

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo">
       <div class="card-img-overlay">
         <h1 class="card-title titulohome letter" >Brew Coffee</h1>
-        <p class="card-text titulohome letter"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
+        <p class="card-text titulohome2 letter"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
       </div></div>
       <div class="card mb-6" style="max-width: 540px;">
         <div class="row g-0">
