--- a/menu.html
+++ b/menu.html
@@ -52,6 +52,10 @@
   <div class="carta">
     <h1>Carta</h1></div>
 
+<div class="container">
+  <div class="row">
+  <div class="col-sm-6 col-md-4">
+  
     <div class="card-group">
       <div class="card">
         <img src="multimedia/tematcha.png" class="card-img-top" alt="...">
@@ -59,16 +63,17 @@
           <h5 class="card-title letter">Prueba infuciones exóticas</h5>
           <p class="card-text letter">Disfruta del Té Macha Japones con leche fresca.</p>
           <p class="card-text letter"><small class="text-muted">Perfecto para los dias de calor</small></p>
-        </div>
-      </div>
-      <div class="card">
+        </div></div>
+      </div></div>
+      <div class="col-sm-6 col-md-4"><div class="card">
         <img src="multimedia/americano.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title letter">Café Amenicano</h5>
           <p class="card-text letter">Si eres de bebidas mas tracionales, te recomendamos el clasico Café americano, un expreso diluido en un mayor porcentaje de agua.</p>
           <p class="card-text letter"><small class="text-muted">Perfecto si no te gustan los sabores fuertes</small></p>
         </div>
-      </div>
+      </div></div>
+      <div class="col-sm-6 col-md-4">
       <div class="card">
         <img src="multimedia/postre.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -76,8 +81,10 @@
           <p class="card-text letter">Puedes acompañar tus bebidas con cookies de variedad de sabores y colores.</p>
           <p class="card-text letter"><small class="text-muted">El acompañante ideal</small></p>
         </div>
+      </div></div>
+  </div>
       </div>
-    </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
