creación del footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Menú</title>
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -50,27 +54,72 @@
       </div>
     </nav>
     <div class="card bg-dark text-white">
-      <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo">
+      <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo" />
       <div class="card-img-overlay">
-        <h1 class="card-title titulohome letter" >Brew Coffee</h1>
-        <p class="card-text titulohome2 letter"> Es un espacio para disfrutar de bebidas a base principalmente de café y diversos tipos de infusiones, así como postres.</p>
-      </div></div>
-      <div class="card mb-6" style="max-width: 540px;">
-        <div class="row g-0">
-          <div class="col-sm-3">
-            <img src="multimedia/latteart.png" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-sm-9">
-            <div class="card-body">
-              <h5 class="card-title letter">Café Latte Art</h5>
-              <p class="card-text letter">Aprecia técnicas que utiliza los baristas para la realización de patrones y dibujos en la superficie del café. El diseño emerge en la medida en la que la crema emulsionada de la leche entra en contacto con el café. Los baristas suelen utilizar esta técnica para decorar los cafés que preparan.</p>
-              <p class="card-text letter"><small class="text-muted">disfruta de momentos . . .</small></p>
-            </div>
+        <h1 class="card-title titulohome letter">Brew Coffee</h1>
+        <p class="card-text titulohome2 letter">
+          Es un espacio para disfrutar de bebidas a base principalmente de café
+          y diversos tipos de infusiones, así como postres.
+        </p>
+      </div>
+    </div>
+    <div class="card mb-6" style="max-width: 540px">
+      <div class="row g-0">
+        <div class="col-sm-3">
+          <img
+            src="multimedia/latteart.png"
+            class="img-fluid rounded-start"
+            alt="..."
+          />
+        </div>
+        <div class="col-sm-9">
+          <div class="card-body">
+            <h5 class="card-title letter">Café Latte Art</h5>
+            <p class="card-text letter">
+              Aprecia técnicas que utiliza los baristas para la realización de
+              patrones y dibujos en la superficie del café. El diseño emerge en
+              la medida en la que la crema emulsionada de la leche entra en
+              contacto con el café. Los baristas suelen utilizar esta técnica
+              para decorar los cafés que preparan.
+            </p>
+            <p class="card-text letter">
+              <small class="text-muted">disfruta de momentos . . .</small>
+            </p>
           </div>
         </div>
       </div>
+    </div>
 
-
+    <div class="container-fluid item">
+      <div class="row justify-content-center">
+        <div class="col-sm-3 col-md-4 text-center footer">
+          <div>
+            Ubícanos
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
+            </div>
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
+                >Brew Coffee Urquinaona</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3 col-md-4 text-center  footer">
+          <img src="multimedia/logoNegro.jpg" alt="Logo Negro" id="logonegro" />
+        </div>
+        <div class="col-sm-3 col-md-4 text-center footer">
+         <div> Contacto
+          <div>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-envelope"></i>
+            <i class="bi bi-telephone"></i>
+          </div></div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
