--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Menú</title>
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -19,7 +23,9 @@
       style="background-color: rgba(90, 69, 69, 0.845)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"></a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -103,7 +109,38 @@
         </div>
       </div>
     </div>
-
+    <div class="container-fluid item">
+      <div class="row justify-content-center">
+        <div class="col-sm-3 col-md-4 text-center footer">
+          <div>
+            Ubícanos
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
+            </div>
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
+                >Brew Coffee Urquinaona</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3 col-md-4 text-center footer">
+          <img src="multimedia/logoNegro.jpg" alt="Logo Negro" id="logonegro" />
+        </div>
+        <div class="col-sm-3 col-md-4 text-center footer">
+          <div>
+            Contacto
+            <div>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-envelope"></i>
+              <i class="bi bi-telephone"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
