--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Menú</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +20,9 @@
       style="background-color: rgba(90, 69, 69, 0.845)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"></a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="multimedia/logoBlanco.jpg" alt="Foto café" width="50px"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,44 +51,104 @@
       </div>
     </nav>
 
+    <div class="carta">
+      <h1>Carta</h1>
+    </div>
 
-  <div class="carta">
-    <h1>Carta</h1></div>
-
-<div class="container">
-  <div class="row">
-  <div class="col-sm-6 col-md-4">
-  
-    <div class="card-group">
-      <div class="card">
-        <img src="multimedia/tematcha.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title letter">Prueba infuciones exóticas</h5>
-          <p class="card-text letter">Disfruta del Té Macha Japones con leche fresca.</p>
-          <p class="card-text letter"><small class="text-muted">Perfecto para los dias de calor</small></p>
-        </div></div>
-      </div></div>
-      <div class="col-sm-6 col-md-4"><div class="card">
-        <img src="multimedia/americano.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title letter">Café Amenicano</h5>
-          <p class="card-text letter">Si eres de bebidas mas tracionales, te recomendamos el clasico Café americano, un expreso diluido en un mayor porcentaje de agua.</p>
-          <p class="card-text letter"><small class="text-muted">Perfecto si no te gustan los sabores fuertes</small></p>
+    <div class="container g-3">
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <div class="card-group">
+            <div class="card h-100">
+              <img
+                src="multimedia/tematcha.png"
+                class="card-img-top h-100"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title letter">Prueba infuciones exóticas</h5>
+                <p class="card-text letter">
+                  Disfruta del Té Macha Japones con leche fresca.
+                </p>
+                <p class="card-text letter">
+                  <small class="text-muted"
+                    >Perfecto para los dias de calor</small
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div></div>
-      <div class="col-sm-6 col-md-4">
-      <div class="card">
-        <img src="multimedia/postre.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title letter">Cookies</h5>
-          <p class="card-text letter">Puedes acompañar tus bebidas con cookies de variedad de sabores y colores.</p>
-          <p class="card-text letter"><small class="text-muted">El acompañante ideal</small></p>
+        <div class="col-sm-6 col-md-4">
+          <div class="card h-100">
+            <img
+              src="multimedia/americano.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title letter">Café Amenicano</h5>
+              <p class="card-text letter">
+                Si eres de bebidas mas tracionales, te recomendamos el clasico
+                Café americano, un expreso diluido en un mayor porcentaje de
+                agua.
+              </p>
+              <p class="card-text letter">
+                <small class="text-muted"
+                  >Perfecto si no te gustan los sabores fuertes</small
+                >
+              </p>
+            </div>
+          </div>
         </div>
-      </div></div>
-  </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="card h-100">
+            <img src="multimedia/postre.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title letter">Cookies</h5>
+              <p class="card-text letter">
+                Puedes acompañar tus bebidas con cookies de variedad de sabores
+                y colores.
+              </p>
+              <p class="card-text letter">
+                <small class="text-muted">El acompañante ideal</small>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
 
-
+    <div class="container-fluid item">
+      <div class="row justify-content-center">
+        <div class="col-sm-3 col-md-4 text-center footer">
+          <div>
+            Ubícanos
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
+            </div>
+            <div>
+              <i class="bi bi-geo-alt"></i
+              ><a href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
+                >Brew Coffee Urquinaona</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3 col-md-4 text-center  footer">
+          <img src="multimedia/logoNegro.jpg" alt="Logo Negro" id="logonegro" />
+        </div>
+        <div class="col-sm-3 col-md-4 text-center footer">
+         <div> Contacto
+          <div>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-envelope"></i>
+            <i class="bi bi-telephone"></i>
+          </div></div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
