--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,7 @@
         </div>
       </div>
     </div>
+    <!-- //////////////////Footer////////////////// -->
     <div class="container-fluid item">
       <div class="row justify-content-center">
         <div class="col-sm-3 col-md-4 text-center footer">
