--- a/index.html
+++ b/index.html
@@ -53,42 +53,63 @@
         </div>
       </div>
     </nav>
-    <div class="card bg-dark text-white">
+    <div class="card bg-dark text-white ">
       <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo" />
-      <div class="card-img-overlay">
+      <div class="card-img-overlay cardHome">
         <h1 class="card-title titulohome letter">Brew Coffee</h1>
-        <p class="card-text titulohome2 letter">
-          Es un espacio para disfrutar de bebidas a base principalmente de café
-          y diversos tipos de infusiones, así como postres.
+        <p class="card-text titulohome2 letter">Es un espacio para disfrutar de bebidas a base principalmente de café
+          y diversos tipos de infusiones, así como tamonién de postres.
         </p>
       </div>
     </div>
-    <div class="card mb-6" style="max-width: 540px">
-      <div class="row g-0">
-        <div class="col-sm-3">
-          <img
-            src="multimedia/latteart.png"
-            class="img-fluid rounded-start"
-            alt="..."
-          />
-        </div>
-        <div class="col-sm-9">
-          <div class="card-body">
-            <h5 class="card-title letter">Café Latte Art</h5>
-            <p class="card-text letter">
-              Aprecia técnicas que utiliza los baristas para la realización de
-              patrones y dibujos en la superficie del café. El diseño emerge en
-              la medida en la que la crema emulsionada de la leche entra en
-              contacto con el café. Los baristas suelen utilizar esta técnica
-              para decorar los cafés que preparan.
-            </p>
-            <p class="card-text letter">
-              <small class="text-muted">disfruta de momentos . . .</small>
-            </p>
+    <div class="container">
+      <div class="row g-2">
+        <div class="col-sm-6 col-md-6">
+          <div class="card-group">
+            <div class="card h-100">
+              <img
+                src="multimedia/latteart.png"
+                class="card-img-top"
+                alt="Latte Art"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Café Latte Art</h5>
+                <p class="card-text">
+                  Aprecia técnicas que utiliza los baristas para la realización
+                  de patrones y dibujos en la superficie del café. El diseño
+                  emerge en la medida en la que la crema emulsionada de la leche
+                  entra en contacto con el café. Los baristas suelen utilizar
+                  esta técnica para decorar los cafés que preparan.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Disfruta de momentos . . .</small>
+                </p>
+              </div>
+            </div>
+          </div></div>
+          <div class="col-sm-6 col-md-6">
+            <div class="card h-100">
+              <img
+                src="multimedia/envase.jpg"
+                class="card-img-top"
+                alt="takeaway"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Takeaway</h5>
+                <p class="card-text">
+                  Para cuando no tengas tiempo, pero aun quieras tomar tu café
+                  del día.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Mejora tu camino. . .</small>
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
+        
       </div>
     </div>
+    <!-- //////////////////Footer////////////////// -->
 
     <div class="container-fluid item">
       <div class="row justify-content-center">
@@ -107,16 +128,18 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-md-4 text-center  footer">
+        <div class="col-sm-3 col-md-4 text-center footer">
           <img src="multimedia/logoNegro.jpg" alt="Logo Negro" id="logonegro" />
         </div>
         <div class="col-sm-3 col-md-4 text-center footer">
-         <div> Contacto
-          <div class="iconos">
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-envelope"></i>
-            <i class="bi bi-telephone"></i>
-          </div></div>
+          <div>
+            Contacto
+            <div class="iconos">
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-envelope"></i>
+              <i class="bi bi-telephone"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
