--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Menú</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -63,7 +66,7 @@
               <img
                 src="multimedia/tematcha.png"
                 class="card-img-top h-100"
-                alt="..."
+                alt="Te Matcha"
               />
               <div class="card-body">
                 <h5 class="card-title letter">Prueba infuciones exóticas</h5>
@@ -72,7 +75,7 @@
                 </p>
                 <p class="card-text letter">
                   <small class="text-muted"
-                    >Perfecto para los dias de calor</small
+                    >Perfecto para los días de calor</small
                   >
                 </p>
               </div>
@@ -84,10 +87,10 @@
             <img
               src="multimedia/americano.png"
               class="card-img-top"
-              alt="..."
+              alt="Café Americano"
             />
             <div class="card-body">
-              <h5 class="card-title letter">Café Amenicano</h5>
+              <h5 class="card-title letter">Café Americano</h5>
               <p class="card-text letter">
                 Si eres de bebidas mas tracionales, te recomendamos el clasico
                 Café americano, un expreso diluido en un mayor porcentaje de
@@ -103,7 +106,7 @@
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="card h-100">
-            <img src="multimedia/postre.png" class="card-img-top" alt="..." />
+            <img src="multimedia/postre.png" class="card-img-top" alt="Cookies" />
             <div class="card-body">
               <h5 class="card-title letter">Cookies</h5>
               <p class="card-text letter">
@@ -118,7 +121,7 @@
         </div>
       </div>
     </div>
-
+<!-- //////////////////Footer////////////////// -->
     <div class="container-fluid item">
       <div class="row justify-content-center">
         <div class="col-sm-3 col-md-4 text-center footer">
@@ -136,16 +139,18 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-md-4 text-center  footer">
+        <div class="col-sm-3 col-md-4 text-center footer">
           <img src="multimedia/logoNegro.jpg" alt="Logo Negro" id="logonegro" />
         </div>
         <div class="col-sm-3 col-md-4 text-center footer">
-         <div> Contacto
           <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-envelope"></i>
-            <i class="bi bi-telephone"></i>
-          </div></div>
+            Contacto
+            <div>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-envelope"></i>
+              <i class="bi bi-telephone"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
