--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,9 @@
         </div>
       </div>
     </nav>
-
+    <div class="titulo-carta">
+      <h1>Escríbenos</h1>
+    </div>
     <div class="container d-flex justify-content-center align-items-center">
       <div class="form">
         <div class="row">
