--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
         </div>
       </div>
     </nav>
-    <div class="card bg-dark text-white ">
+    <div class="card bg-dark text-white">
       <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo" />
       <div class="card-img-overlay cardHome">
         <h1 class="card-title titulohome letter">Brew Coffee</h1>
-        <p class="card-text titulohome2 letter">Es un espacio para disfrutar de bebidas a base principalmente de café
+        <p class="card-text titulohome2 letter">
+          Es un espacio para disfrutar de bebidas a base principalmente de café
           y diversos tipos de infusiones, así como tamonién de postres.
         </p>
       </div>
@@ -86,27 +87,27 @@
                 </p>
               </div>
             </div>
-          </div></div>
-          <div class="col-sm-6 col-md-6">
-            <div class="card h-100">
-              <img
-                src="multimedia/envase.jpg"
-                class="card-img-top"
-                alt="takeaway"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Takeaway</h5>
-                <p class="card-text">
-                  Para cuando no tengas tiempo, pero aun quieras tomar tu café
-                  del día.
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Mejora tu camino. . .</small>
-                </p>
-              </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <div class="card h-100">
+            <img
+              src="multimedia/envase.jpg"
+              class="card-img-top"
+              alt="takeaway"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Takeaway</h5>
+              <p class="card-text">
+                Para cuando no tengas tiempo, pero aun quieras tomar tu café del
+                día.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Mejora tu camino. . .</small>
+              </p>
             </div>
           </div>
-        
+        </div>
       </div>
     </div>
     <!-- //////////////////Footer////////////////// -->
