--- a/menu.html
+++ b/menu.html
@@ -57,15 +57,15 @@
     <div class="titulo-carta">
       <h1>Carta</h1>
     </div>
-
-    <div class="container g-3">
+<!-- ////////////////////Cards/////////////// -->
+    <div class="container  g-3">
       <div class="row g-2">
         <div class="col-sm-6 col-md-4">
           <div class="card-group">
             <div class="card h-100">
               <img
                 src="multimedia/tematcha.png"
-                class="card-img-top h-100"
+                class="card-img-top"
                 alt="Te Matcha"
               />
               <div class="card-body">
@@ -121,6 +121,21 @@
         </div>
       </div>
     </div>
+<!-- ////////////Carrusel///////////// -->
+
+<div id="carouselSlidesOnly" class="carrusel slide"  data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="multimedia/Cafés.png" class="d-block w-100" alt="Cafés">
+    </div>
+    <div class="carousel-item">
+      <img src="multimedia/croissant.png" class="d-block w-100" alt="croissant">
+    </div>
+    <div class="carousel-item">
+      <img src="/multimedia/caféGrano.png" class="d-block w-100" alt="café Grano">
+    </div>
+  </div>
+</div>
 <!-- //////////////////Footer////////////////// -->
     <div class="container-fluid item">
       <div class="row justify-content-center">
