arreglos card y readme

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </nav>
-    <div class="titulo-carta">
+    <div class="titulo-contacto">
       <h1>Escríbenos</h1>
     </div>
     <div class="container d-flex justify-content-center align-items-center">
