--- a/menu.html
+++ b/menu.html
@@ -57,11 +57,11 @@
     <div class="titulo-carta">
       <h1>Carta</h1>
     </div>
-<!-- ////////////////////Cards/////////////// -->
-    <div class="container  g-3">
+    <!-- ////////////////////Cards/////////////// -->
+    <div class="container g-3">
       <div class="row g-2">
-        <div class="col-sm-6 col-md-4">
-          <div class="card-group">
+        <div class="col-sm-6 col-md-4 col-lg-3">
+        
             <div class="card h-100">
               <img
                 src="multimedia/tematcha.png"
@@ -69,20 +69,22 @@
                 alt="Te Matcha"
               />
               <div class="card-body">
-                <h5 class="card-title letter">Prueba infuciones exóticas</h5>
+                <h5 class="card-title letter">Prueba Infuciones Exóticas</h5>
                 <p class="card-text letter">
                   Disfruta del Té Macha Japones con leche fresca.
                 </p>
-                <p class="card-text letter">
-                  <small class="text-muted"
-                    >Perfecto para los días de calor</small
-                  >
-                </p>
+                <div class="pieCard">
+                  <p class="card-text letter">
+                    <small class="text-muted">
+                      Perfecto para los días de calor.</small
+                    >
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
+          
         </div>
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100">
             <img
               src="multimedia/americano.png"
@@ -96,47 +98,84 @@
                 Café americano, un expreso diluido en un mayor porcentaje de
                 agua.
               </p>
-              <p class="card-text letter">
-                <small class="text-muted"
-                  >Perfecto si no te gustan los sabores fuertes</small
-                >
-              </p>
+              <div class="pieCard">
+                <p class="card-text letter">
+                  <small class="text-muted"
+                    >Perfecto si no te gustan los sabores fuertes.</small
+                  >
+                </p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100">
-            <img src="multimedia/postre.png" class="card-img-top" alt="Cookies" />
+            <img
+              src="multimedia/postre.png"
+              class="card-img-top"
+              alt="Cookies"
+            />
             <div class="card-body">
               <h5 class="card-title letter">Cookies</h5>
               <p class="card-text letter">
                 Puedes acompañar tus bebidas con cookies de variedad de sabores
                 y colores.
               </p>
+              <div class="pieCard">
+                <p class="card-text letter">
+                  <small class="text-muted">El acompañante ideal.</small>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100">
+            <img
+              src="multimedia/Cold-brewed-Coffee_.jpg"
+              class="card-img-top"
+              alt="Cold Brew"
+            />
+            <div class="card-body">
+              <h5 class="card-title letter">Cold Brew</h5>
               <p class="card-text letter">
-                <small class="text-muted">El acompañante ideal</small>
+                El café preparado en frío, también llamado extracción con agua
+                fría o prensado en frío.
               </p>
+              <div class="pieCard">
+                <p class="card-text letter">
+                  <small class="text-muted">café con un toque fresco.</small>
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-<!-- ////////////Carrusel///////////// -->
+    <!-- ////////////Carrusel///////////// -->
 
-<div id="carouselSlidesOnly" class="carrusel slide"  data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="multimedia/Cafés.png" class="d-block w-100" alt="Cafés">
+    <div id="carouselSlidesOnly" class="carrusel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="multimedia/Cafés.png" class="d-block w-100" alt="Cafés" />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="multimedia/croissant.png"
+            class="d-block w-100"
+            alt="croissant"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="/multimedia/caféGrano.png"
+            class="d-block w-100"
+            alt="café Grano"
+          />
+        </div>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="multimedia/croissant.png" class="d-block w-100" alt="croissant">
-    </div>
-    <div class="carousel-item">
-      <img src="/multimedia/caféGrano.png" class="d-block w-100" alt="café Grano">
-    </div>
-  </div>
-</div>
-<!-- //////////////////Footer////////////////// -->
+    <!-- //////////////////Footer////////////////// -->
     <div class="container-fluid item">
       <div class="row justify-content-center">
         <div class="col-sm-3 col-md-4 text-center footer">
