arreglos realizados, contraste de color, ubicación de cards y readme

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
         </div>
       </div>
     </nav>
+    <!-- //////////////////Formulario///////////// -->
     <div class="titulo-contacto">
       <h1>Escríbenos</h1>
     </div>
@@ -97,7 +98,7 @@
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="Check" />
               <label class="form-check-label" for="Check"
-                >He leído y acepto la<button type="button" class="btn btn-link">
+                >He leído y acepto la<button type="button" class="btn btn-link enlace">
                   Politica de Privacidad.</button
                 >*
               </label>
@@ -107,7 +108,7 @@
 
         <div class="row">
           <div class="col">
-            <button type="button" class="btn btn-outline-info">Enviar</button>
+            <button type="button" class="btn btn-dark">Enviar</button>
           </div>
         </div>
       </div>
@@ -120,11 +121,11 @@
             Ubícanos
             <div>
               <i class="bi bi-geo-alt"></i
-              ><a href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
+              ><a class="enlace" href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
             </div>
             <div>
               <i class="bi bi-geo-alt"></i
-              ><a href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
+              ><a class="enlace" href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
                 >Brew Coffee Urquinaona</a
               >
             </div>
