--- a/index.html
+++ b/index.html
@@ -53,43 +53,44 @@
         </div>
       </div>
     </nav>
+    <!-- /////////////Img Encabezado///////// -->
     <div class="card bg-dark text-white">
       <img src="multimedia/goteo.jpg" class="card-img" alt="Cafe goteo" />
       <div class="card-img-overlay cardHome">
-        <h1 class="card-title titulohome letter">Brew Coffee</h1>
-        <p class="card-text titulohome2 letter">
+        <h1 class="card-title titulohome">Brew Coffee</h1>
+        <p class="card-text titulohome2">
           Es un espacio para disfrutar de bebidas a base principalmente de café
           y diversos tipos de infusiones, así como tamonién de postres.
         </p>
       </div>
     </div>
+    <!-- ////////////////Carta Home//////////// -->
     <div class="container">
-      <div class="row g-2">
-        <div class="col-sm-6 col-md-6">
-          <div class="card-group">
-            <div class="card h-100">
-              <img
-                src="multimedia/latteart.png"
-                class="card-img-top"
-                alt="Latte Art"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Café Latte Art</h5>
-                <p class="card-text">
-                  Aprecia técnicas que utiliza los baristas para la realización
-                  de patrones y dibujos en la superficie del café. El diseño
-                  emerge en la medida en la que la crema emulsionada de la leche
-                  entra en contacto con el café. Los baristas suelen utilizar
-                  esta técnica para decorar los cafés que preparan.
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Disfruta de momentos . . .</small>
-                </p>
-              </div>
+      <div class="row g-2 p-2 justify-content-center">
+        <div class="col-sm-6 col-md-6 col-lg-5">
+          <div class="card h-100">
+            <img
+              src="multimedia/latteart.png"
+              class="card-img-top"
+              alt="Latte Art"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Café Latte Art</h5>
+              <p class="card-text">
+                Aprecia técnicas que utiliza los baristas para la realización de
+                patrones y dibujos en la superficie del café. El diseño emerge
+                en la medida en la que la crema emulsionada de la leche entra en
+                contacto con el café. Los baristas suelen utilizar esta técnica
+                para decorar los cafés que preparan.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Disfruta de momentos . . .</small>
+              </p>
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-6">
+
+        <div class="col-sm-6 col-md-6 col-lg-5">
           <div class="card h-100">
             <img
               src="multimedia/envase.jpg"
@@ -119,11 +120,13 @@
             Ubícanos
             <div>
               <i class="bi bi-geo-alt"></i
-              ><a href="https://goo.gl/maps/4sgayZBfu6EbL9idA">Brew Coffee</a>
+              ><a class="enlace" href="https://goo.gl/maps/4sgayZBfu6EbL9idA"
+                >Brew Coffee</a
+              >
             </div>
             <div>
               <i class="bi bi-geo-alt"></i
-              ><a href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
+              ><a class="enlace" href="https://goo.gl/maps/5gRQ4m7cg9jfBVac8"
                 >Brew Coffee Urquinaona</a
               >
             </div>
